--- a/MediMove/MediMove/Client/Pages/Popup.razor
+++ b/MediMove/MediMove/Client/Pages/Popup.razor
@@ -61,6 +61,7 @@
 
     public bool ShowErrorsOrAssign<T>(ErrorOr<T> result, ref T values)
     {
+        //Console.WriteLine($"type {T}");
         if (result.IsError) ShowErrors(result.Errors);
         else values = result.Value;
 
